[package]
name = "spacy_rs"
version = "0.1.0"
authors = ["Douglas Luman <dluman@douglasjluman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpython = "0.5"
libc = "0.2"
lazy_static = "1.4.0"
libloading = "0.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
